--- a/MovieWeatherApp/Components/Layout/NavMenu.razor
+++ b/MovieWeatherApp/Components/Layout/NavMenu.razor
@@ -25,5 +25,10 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="movieweather">
+                <span class="bi bi-film" aria-hidden="true"></span> Movie Weather
+            </NavLink>
+        </div>
     </nav>
 </div>
