Feat:Add movie sorting functionality with IComparable implementation

--- a/MovieWeatherApp/Components/MovieWeather.razor
+++ b/MovieWeatherApp/Components/MovieWeather.razor
@@ -275,4 +275,20 @@
             await SearchMovies();
         }
     }
+    private void SortMoviesByYear()
+    {
+        if (movies != null && movies.Count > 0)
+        {
+            movies.Sort(); 
+        }
+    }
+    
+    private void SortMoviesByTitle()
+    {
+        if (movies != null && movies.Count > 0)
+        {
+            movies = movies.OrderBy(m => m.Title).ToList();
+        }
+    }
+    
 }
